2004-09-15  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2004-09-14  Matthias Clasen  <mclasen@redhat.com>

	* gtk/queryimmodules.c (escape_string): Copy code from queryloaders.c
	which turns backslashes in slashes on win32.  (#152608, Kazuki IWAMOTO)

	* gtk/gtktreeview.c (gtk_tree_view_focus_to_cursor): Set the cursor
	to the first selected row instead of always to the first row if there
	is no cursor.  (#143270, Jean Bréfort)

	* tests/testfilechooser.c (main): Fix a few typos.

2004-09-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkexpander.c: 
	* gtk/gtktreeview.c: Change the default expander size to 12 to compensate 
	for the recent change to gtk_default_draw_expander().

	* gtk/gtkstyle.c (gtk_default_draw_expander): Use a linewidth of one
	for expander sizes up to 16.

	* gtk/gtkentrycompletion.c (gtk_entry_completion_set_model): Resize the
	popup if the model is replaced.  (#152333)
	(_gtk_entry_completion_resize_popup): 
	Improve positioning of entry completion popup.

2004-09-09  Matthias Clasen  <mclasen@redhat.com>

	* tests/testfilechooser.c (main): Update sensitivity of the "Select all"
	button.

2004-09-08  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkstyle.c (gtk_default_draw_expander): Draw expanders a bit 
	better.

2004-09-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkuimanager.c (gtk_ui_manager_add_ui): Use the proper node type
	for placeholders in toolbars.  (#151963, Olivier Andrieu)

2004-09-06  Kjartan Maraas  <kmaraas@gnome.org>

	gtk/gtkfilesystemmodel.c (do_files_added): Use the correct
	function to free stuff. Avoids a leak and a warning.
	Closes bug #151985

Sat Sep  4 23:42:09 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Fix the Solaris Xinerama checks.  (#151754) 

Fri Sep  3 22:45:03 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkuimanager.c (print_node): Don't print out attributes
	for the <ui> root node.  (#151752, Lorenzo Gil Sánchez)

2004-09-03  Tor Lillqvist  <tml@iki.fi>
